--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@ atupdate
 __pycache__
 
 # ignore config, but not subdirs
-!config/*/
-config/*
-sql/test_db
+#!config/*/
+#config/*
+#sql/test_db
 
 # vscode
 .vscode/*
