Replace most references to Baystation12 with Metro13 [ERROR-BANANZA]
Whether or not this breaks some scripts is yet to be determined
I also redid a lot of the HTML so we now have relevant hyperlinks in certain places, our credits list actually credits us, and our github readme has some links
I also generated a permalink to the discord for this

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,11 @@
 .git
 !.git/HEAD
 !.git/logs/HEAD
-baystation12.dmb
-baystation12.rsc
-baystation12.dyn.rsc
-baystation12.dyn.rsc.lk
-baystation12.int
+metro13.dmb
+metro13.rsc
+metro13.dyn.rsc
+metro13.dyn.rsc.lk
+metro13.int
 libmysql.dll
 .dockerignore
 Dockerfile
