--- a/Metro-13-master/.dockerignore
+++ b/Metro-13-master/.dockerignore
@@ -1,11 +1,11 @@
 .git
 !.git/HEAD
 !.git/logs/HEAD
-baystation12.dmb
-baystation12.rsc
-baystation12.dyn.rsc
-baystation12.dyn.rsc.lk
-baystation12.int
+metro13.dmb
+metro13.rsc
+metro13.dyn.rsc
+metro13.dyn.rsc.lk
+metro13.int
 libmysql.dll
 .dockerignore
 Dockerfile
